      is in use. Update the letter service test.
      
    * Fix several occurences of: Use of uninitialized value in concatenation (.)
      or string at .../lib/site_perl/5.8.8/XML/DOM.pm line 483. There are 
      several more that need to be fixed.
      
  UPS_Online
  
    * Disable a few tests until they can be fixed.


2.04  Unreleased


  USPS_Online and UPS_Online changes by Rusty Conover <rconover@infogears.com>:

    * Rename tracking modules so they match the path, 
      Business::Shipping::UPS_Online::Tracking and Business::Shipping::USPS_Online::Tracking.

    * Fix tracking so it works with multiple tracking its, Class::MethodMaker 2.0 
      is a little tricky about this, you can't pass an arrayref on the init for 
      the tracking object, you need to pass it in a second call.  Update example code.

    * Fix caching for tracking so it actually works, rather then failing with an error 
      on Class::MethodMaker 2.x.

    * Fix caching for tracking so it doesn't overwrite cached versions of results on 
      every retrieval, causing the cache entries to never expire.

    * Cleanup date parsing code in Business::Shipping::USPS_Online::Tracking and to 
      no longer need Clone.
  
  USPS_Online changes by Mike Wexler <mwexler@tias.com>:
  
    * Fix error messages on International requests.
    
    * Add option to disable automatic package splitting.
    
    * Add width, height, length, and girth.
     
  General
  
    * [Fixed] Change GNU-style long-name command line arguments to more widely-
      compatible one-letter arguments. Reported by Todd Anderson 
      <ahqmed@hotmail.com>.
      
    * Removed some unused code.
    
    * Fix fuel surcharge updater. Contributed by Ron Phipps <ron@endpoint.com>.



2.03  Dec 31 2005


  USPS_Online
  
    * Fix weight calculation error and support shipments less than one pound.
      Patch by Mike Wexler <mwexler@tias.com>.
  
  
2.02  Dec 22 2005


  General
  